Refactor ParquetsDBInserter